# project

./: README.md  main.py  pyproject.toml
data/: latin_words.txt  names.txt  russian_words.txt
