[tool.poetry]
name = "9-2-practise"
version = "0.1.0"
description = ""
authors = ["Kalyuzhnyy Dmitry <difrom_pro@mail.ru>"]
readme = "README.md"
packages = [{include = "9"}]

[tool.poetry.dependencies]
python = "^3.14"
poetry-core = "^2.2.1"
lint = "^1.2.1"
flake8 = "^7.3.0"


[tool.poetry.group.lint.dependencies]
black = "^25.9.0"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
